peac_dev/force-app/main/default/objects/Pricing_Result__c/Pricing_Result__c.object-meta.xml
<CustomObject>
    <description>Pricing users should capture the outcome of a pricing run, including rates, factors, and amounts, for auditability and analysis.</description>
    <label>Pricing Result</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Pricing Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>