peac_dev/force-app/main/default/objects/Pricing_Result__c/fields/Base_Residual__c.field-meta.xml
<CustomField>
    <fullName>Base_Residual__c</fullName>
    <label>Base Residual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>