peac_dev/force-app/main/default/objects/Pricing_Result__c/fields/EF_Approved_Offers__c.field-meta.xml
<CustomField>
    <fullName>EF_Approved_Offers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EF Approved Offers</label>
    <referenceTo>EF_Approved_Offers__c</referenceTo>
    <relationshipLabel>Pricing Results</relationshipLabel>
    <relationshipName>Pricing_Results</relationshipName>
    <type>Lookup</type>
</CustomField>