peac_dev/force-app/main/default/objects/Pricing_Result__c/fields/Final_Rate__c.field-meta.xml
<CustomField>
    <fullName>Final_Rate__c</fullName>
    <label>Final Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>