peac_dev/force-app/main/default/objects/Pricing_Result__c/fields/Modified_Rate__c.field-meta.xml
<CustomField>
    <fullName>Modified_Rate__c</fullName>
    <label>Modified Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>