peac_dev/force-app/main/default/objects/Pricing_Result__c/fields/Modified_Residual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Modified_Residual_Amount__c</fullName>
    <label>Modified Residual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>