peac_dev/force-app/main/default/objects/Pricing_Result__c/fields/Modifier__c.field-meta.xml
<CustomField>
    <fullName>Modifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modifier</label>
    <referenceTo>Modifier__c</referenceTo>
    <relationshipLabel>Pricing Results</relationshipLabel>
    <relationshipName>Modifier_Pricing_Results</relationshipName>
    <type>Lookup</type>
</CustomField>