peac_dev/force-app/main/default/objects/Pricing_Result__c/fields/Parent_Pricing_Result__c.field-meta.xml
<CustomField>
    <fullName>Parent_Pricing_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Pricing Result</label>
    <referenceTo>Pricing_Result__c</referenceTo>
    <relationshipLabel>Modifier Pricing Results</relationshipLabel>
    <relationshipName>Modifier_Pricing_Results</relationshipName>
    <type>Lookup</type>
</CustomField>