peac_dev/force-app/main/default/objects/Pricing_Result__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Pricing Results</relationshipLabel>
    <relationshipName>Pricing_Results</relationshipName>
    <type>Lookup</type>
</CustomField>