peac_dev/force-app/main/default/objects/Pricing_Result__c/fields/Rate_Card_Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Card Rate</label>
    <referenceTo>Rate_Card_Rate__c</referenceTo>
    <relationshipLabel>Pricing Results</relationshipLabel>
    <relationshipName>Pricing_Results</relationshipName>
    <type>Lookup</type>
</CustomField>