peac_dev/force-app/main/default/objects/Pricing_Result__c/fields/Rate_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Type__c</fullName>
    <formula>TEXT(Rate_Card_Rate__r.Rate_Card_Row__r.Rate_Card__r.Rate_Card_Type__c)</formula>
    <label>Rate Card Type</label>
    <type>Text</type>
</CustomField>