peac_dev/force-app/main/default/objects/Pricing_Result__c/fields/Rate_Factor__c.field-meta.xml
<CustomField>
    <fullName>Rate_Factor__c</fullName>
    <label>Rate Factor</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>