peac_dev/force-app/main/default/objects/Pricing_Result__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Rate</fullName>
            </value>
            <value>
                <fullName>Modifier</fullName>
            </value>
            <value>
                <fullName>TValue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>