peac_dev/force-app/main/default/objects/Pricing_Result__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>