peac_dev/force-app/main/default/objects/Pricing_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>